tests/NormalTests/paczka2/big_fuzzy/32454663.err
Error in line 1: A338 A338 29,2
Error in line 2: A338 S885 18,7
Error in line 5: Djm55m S885 2,3
Error in line 6: T0kow S38 71,1
Error in line 7: Djm55m S361 49,7
Error in line 27: tizFg A338 -1,4
Error in line 24: Djm55m S885 20,5
Error in line 30: A338 S38 76,5
Error in line 35: A338 S885 38,8
Error in line 19: tizFg A338 16,0
Error in line 42: tizFg S38 1,3
Error in line 56: Djm55m S38 224,4
Error in line 78: Djm55m A338 -2,2
Error in line 77: T0kow S38 3,5
Error in line 89: DhY5 S361 51,0
Error in line 103: tizFg S885 10,4
Error in line 105: DhY5 S885 92,7
Error in line 104: Djm55m A338 308,2
Error in line 106: tizFg S38 63,8
Error in line 109: DhY5 S361 53,6
Error in line 93: A338 S885 110,4
Error in line 119: DhY5 S885 21,6
Error in line 127: Djm55m S38 17,2
Error in line 139: DhY5 S38 15,7
Error in line 108: D62rdbg5d86 S361 9,7
Error in line 143: tizFg A338 278,4
Error in line 152: A338 A338 569,4
Error in line 162: Djm55m S38 27,5
Error in line 169: Djm55m S885 41,1
Error in line 151: Lei0se A338 26,9
Error in line 170: DhY5 S885 11,8
Error in line 178: DhY5 S38 81,9
Error in line 182: A338 S885 48,4
Error in line 194: DhY5 S361 242,6
Error in line 196: D62rdbg5d86 S361 14,7
Error in line 210: T0kow S885 133,3
Error in line 228: T0kow S885 29,6
Error in line 238: T0kow S361 64,4
Error in line 239: T0kow A338 51,8
